Новые модальные окна

--- a/_index.html
+++ b/_index.html
@@ -242,6 +242,19 @@
             </div>
         </section>
     </div>
+    <script>
+        let closeModal = document.querySelector('.close-modal_lost');
+        closeModal.addEventListener("click", () => {
+            console.log('click');
+        });
+
+
+        // console.log('click');
+        // let myWindow = window.open(location.assign(location.href), "_blank", "");
+        // setTimeout(myWindow.close(), 1000);
+        // console.log(location.href);
+        // scrollBy(0, window.innerHeight);
+    </script>
 </body>
 
 </html>
