--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
                         <a href="#" id="next-fact">Следующий факт</a>
                     </p>
                 </div>
-                <div class="social-links">
+                <div class="social-links" id="#share">
                     <p class="text__title text__title_indents">
                         Поделись этой игрой
                     </p>
                     <div class="ya-share2 text__title_indents" data-services="vkontakte,facebook,twitter,odnoklassniki,telegram,whatsapp,linkedin,moimir,evernote,lj,pocket,viber"></div>
                 </div>
-                <div>
+                <div id="sendmoney">
                     <iframe src="https://money.yandex.ru/quickpay/shop-widget?writer=seller&targets=Поблагодарить разработчика и пополнить призовой фонд игры&targets-hint=&default-sum=50&button-text=11&payment-type-choice=on&mobile-payment-type-choice=on&hint=&successURL=http%3A%2F%2Fbullsandcows.plan-b.studio%2Fthankyou&quickpay=shop&account=4100179784556"
                         width="400" height="250" frameborder="0" allowtransparency="true" scrolling="no" allowTransparency="yes" class="text__title_indents iframe-style"></iframe>
                 </div>
