Изменения: отправка из футтера, отправка из модального окна (когда положены деньги), единый метод для получания текущей даты и времени, скорректировал ещё некоторый текст, упорядочил; написал комментарии в js, что делает каждый метод

--- a/index.html
+++ b/index.html
@@ -126,12 +126,10 @@
             </div>
             <div class="footer-grid">
                 <div class="footer-main-blocks">
-                    <p class="text__footer">Пожелания/предложения</p>
-                    <form action="#" method="post">
-                        <input class="footer-input" placeholder="Имя"></input>
-                        <textarea class="textarea" placeholder="Сообщение"></textarea>
-                        <button class="button-send-2">Отправить</button>
-                    </form>
+                    <p class="text__footer" id="footerText">Пожелания/предложения</p>
+                    <input class="footer-input" placeholder="Имя" id="userNameFooter"></input>
+                    <textarea class="textarea" placeholder="Сообщение" id="userMsgFooter"></textarea>
+                    <button class="button-send-2" id="userBtnFooter">Отправить</button>
                 </div>
             </div>
         </footer>
