--- a/_index.html
+++ b/_index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="modal-window-text modal-window-lost" id="modal-window">
+    <!-- <div class="modal-window-text modal-window-lost" id="modal-window">
         <div class="win-modal">
             <div class="close-modal close-modal_lost"></div>
             <div class="quote quote_lost">
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- <div class="modal-window-text modal-window-win modal-window-win_money" id="modal-window">
         <div class="win-modal">
             <div class="close-modal"></div>
