--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://yastatic.net/es5-shims/0.0.2/es5-shims.min.js" defer></script>
-    <script src="https://yastatic.net/share2/share.js" defer></script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+        (function(m, e, t, r, i, k, a) {
+            m[i] = m[i] || function() {
+                (m[i].a = m[i].a || []).push(arguments)
+            };
+            m[i].l = 1 * new Date();
+            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+        })
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(65563189, "init", {
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/65563189" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
     <title>Игра &laquo;БЫКИ И КОРОВЫ&raquo;</title>
 </head>
 
@@ -135,6 +153,8 @@
         </footer>
     </div>
     <script src="js/main.js" defer></script>
+    <script src="https://yastatic.net/es5-shims/0.0.2/es5-shims.min.js" defer></script>
+    <script src="https://yastatic.net/share2/share.js" defer></script>
 </body>
 
 </html>
