Убрал стили из планшетной и мобильных версий.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
     <div class="overlay invisible__block" id="overlay"></div>
     <div class="modal-window-text invisible__block" id="modal-window"></div>
     <div class="container">
-
         <header class="header-style">
             <div class="cow-left"></div>
             <div class="between-top">&nbsp;</div>
@@ -66,10 +65,10 @@
                 </div>
                 <div class="action">
                     <p class="action-text text__title_indents">
-                        Угадай все цифры на 3–м ходу <br>и получи 2&nbsp;000&nbsp;рублей в подарок.
+                        Угадай все цифры на 3–м ходу <br>и получи 500&nbsp;рублей в подарок.
                     </p>
                     <p class="action-text text__title_indents">
-                        А если угадаешь все цифры на 4–м ходу, <br>то получишь 1&nbsp;000&nbsp;рублей в подарок.
+                        А если угадаешь все цифры на 4–м ходу, <br>то получишь 100&nbsp;рублей в подарок.
                     </p>
                     <p class="action-text text__title_indents">
                         Те, кто угадают все цифры до 10–го хода <br>получат радость и самоуважение.
